<resources>
    <string name="lsq_sdk_name">TuSDK 涂图</string>
    <string name="lsq_exit_info">再按一次将退出应用</string>
    <string name="lsq_text">TuSDK 涂图</string>
    <string name="lsq_reset">重置</string>
    <string name="lsq_initing">正在初始化</string>
    <string name="lsq_inited">初始化完成</string>
    <string name="lsq_refresh_list_view_state_visible">下拉刷新</string>
    <string name="lsq_refresh_list_view_state_hidden">加载完成</string>
    <string name="lsq_refresh_list_view_state_triggered">释放开始刷新</string>
    <string name="lsq_refresh_list_view_state_loading">正在加载&#8230;</string>
    <string name="lsq_refresh_list_view_state_lasttime">上次刷新时间：</string>
    <string name="lsq_refresh_list_view_state_load_more">正在加载更多&#8230;</string>
    <string name="lsq_date_seconds_ago">秒前</string>
    <string name="lsq_date_minutes_ago">分钟前</string>
    <string name="lsq_date_hours_ago">小时前</string>
    <string name="lsq_date_month">月</string>
    <string name="lsq_date_year">年</string>
    <string name="lsq_date_today">今天</string>
    <string name="lsq_date_formater">yyyy年M月d日</string>
    <string name="lsq_nav_cancel">取消</string>
    <string name="lsq_nav_back">返回</string>
    <string name="lsq_nav_more">更多</string>
    <string name="lsq_nav_remove">删除</string>
    <string name="lsq_nav_complete">完成</string>
    <string name="lsq_button_done">我知道了</string>
    <string name="lsq_button_close">关闭</string>
    <string name="lsq_button_setting">设置</string>
    <string name="lsq_button_switch_camera">切换镜头</string>
    <string name="lsq_button_flash">闪光灯:</string>
    <string name="lsq_button_flash_model_off">禁用</string>
    <string name="lsq_button_flash_model_auto">自动</string>
    <string name="lsq_button_flash_model_open">开启</string>
    <string name="lsq_avatar_actionsheet_title">设置头像</string>
    <string name="lsq_avatar_actionsheet_cancel">取消</string>
    <string name="lsq_avatar_actionsheet_camera">拍照</string>
    <string name="lsq_avatar_actionsheet_album">从相册选择</string>
    <string name="lsq_carema_alert_title">无法开启相机</string>
    <string name="lsq_carema_no_device">您的设备没有相机功能！</string>
    <string name="lsq_carema_no_access">无法访问系统相机，请在\r\n设置&#045;&#062;应用程序&#045;&#062;权限&#045;&#062;%1$s&#034; \r\n开启 相机</string>
    <string name="lsq_carema_image_process">正在处理&#8230;</string>
    <string name="lsq_carema_image_process_completed">处理完成</string>
    <string name="lsq_carema_unsupport_camera2">您当前的系统版本小于5.0或硬件设备对Camera2 API为有限支持，无法开启Camera2</string>
    <string name="lsq_camera_ratioType_title_9_16">9:16</string>
    <string name="lsq_camera_ratioType_title_3_4">3:4</string>
    <string name="lsq_camera_ratioType_title_2_3">2:3</string>
    <string name="lsq_camera_ratioType_title_1_1">1:1</string>
    <string name="lsq_camera_ratioType_title_3_2">3:2</string>
    <string name="lsq_camera_ratioType_title_4_3">4:3</string>
    <string name="lsq_camera_ratioType_title_16_9">16:9</string>
    <string name="lsq_camera_ratioType_title_orgin">全屏</string>
    <string name="lsq_camera_guideLine_title_open">网格开</string>
    <string name="lsq_camera_guideLine_title_off">网格关</string>
    <string name="lsq_album_alert_title">无法访问系统相册</string>
    <string name="lsq_album_no_access">无法访问系统相册，请在\r\n设置&#045;&#062;应用程序&#045;&#062;权限&#045;&#062;%1$s&#034; \r\n开启 存储空间</string>
    <string name="lsq_album_title">相簿</string>
    <string name="lsq_album_total_format">%1$s 张照片</string>
    <string name="lsq_album_empty">还没有照片</string>
    <string name="lsq_album_broken_msg">该照片文件已经被损坏</string>
    <string name="lsq_album_empty_selection_msg">请至少选择一张照片</string>
    <string name="lsq_album_max_selection_msg">最多选择 %d 张照片</string>
    <string name="lsq_album_multi_preview_select">选择</string>
    <string name="lsq_album_multi_preview_done">完成</string>
    <string name="lsq_album_image_size_limited">暂不支持大于 %1$d*%2$d 的图片</string>
    <string name="lsq_save_saveToTemp">正在处理&#8230;</string>
    <string name="lsq_save_saveToTemp_completed">处理完成</string>
    <string name="lsq_save_saveToTemp_failed">处理失败</string>
    <string name="lsq_save_saveToAlbum">正在保存到相册&#8230;</string>
    <string name="lsq_save_saveToAlbum_succeed">保存成功</string>
    <string name="lsq_save_saveToAlbum_failed">保存到相册失败</string>
    <string name="lsq_save_unsupport_storage_title">无法存储文件</string>
    <string name="lsq_save_not_found_sdcard">请插入SD Card</string>
    <string name="lsq_save_insufficient_storage_space">存储空间不足</string>
    <string name="lsq_edit_alert_title">编辑器没有相关权限</string>
    <string name="lsq_edit_no_access">编辑器没有相关权限，请在\r\n设置&#045;&#062;应用程序&#045;&#062;权限&#045;&#062;%1$s&#034; \r\n开启所需权限</string>
    <string name="lsq_edit_button_complete">完成</string>
    <string name="lsq_edit_loading">正在读取&#8230;</string>
    <string name="lsq_edit_filter_processing">正在处理&#8230;</string>
    <string name="lsq_edit_processing">正在处理&#8230;</string>
    <string name="lsq_edit_processed">处理完成</string>
    <string name="lsq_edit_process_error">发生错误，请确认设备已联网</string>
    <string name="lsq_edit_process_adjust_color_error">设备未联网，无法使用自动矫色功能</string>
    <string name="lsq_edit_process_skin_error">设备未联网，无法使用一键美颜所有功能</string>
    <string name="lsq_edit_process_error_no_face">未检测到人脸</string>
    <string name="lsq_edit_process_error_multi_face">检测到多张人脸</string>
    <string name="lsq_edit_process_error_no_face_access">人脸检测请求失败</string>
    <string name="lsq_edit_step_prev">撤销</string>
    <string name="lsq_edit_step_next">重做</string>
    <string name="lsq_edit_auto_adjust">自动校色</string>
    <string name="lsq_edit_entry_filter">滤镜</string>
    <string name="lsq_edit_entry_cuter">裁切</string>
    <string name="lsq_edit_entry_sticker">贴纸</string>
    <string name="lsq_edit_entry_smudge">涂抹</string>
    <string name="lsq_edit_entry_paint">涂鸦</string>
    <string name="lsq_edit_entry_smudge_filter">模糊</string>
    <string name="lsq_edit_cuter_ratio_orgin">原始</string>
    <string name="lsq_edit_cuter_ratio_1_1">1:1</string>
    <string name="lsq_edit_cuter_ratio_2_3">2:3</string>
    <string name="lsq_edit_cuter_ratio_3_4">3:4</string>
    <string name="lsq_edit_cuter_ratio_9_16">9:16</string>
    <string name="lsq_edit_cuter_ratio_3_2">3:2</string>
    <string name="lsq_edit_cuter_ratio_4_3">4:3</string>
    <string name="lsq_edit_cuter_ratio_16_9">16:9</string>
    <string name="lsq_edit_title">编辑</string>
    <string name="lsq_edit_multiple_title">编辑</string>
    <string name="lsq_edit_skin_title">美颜</string>
    <string name="lsq_edit_holy_light">圣光</string>
    <string name="lsq_edit_entry_hdr">HDR</string>
    <string name="lsq_sticker_title">贴纸</string>
    <string name="lsq_sticker_cate_default">贴纸</string>
    <string name="lsq_sticker_cate_watermark">水印</string>
    <string name="lsq_sticker_cate_mood">心情</string>
    <string name="lsq_sticker_cate_frame">相框</string>
    <string name="lsq_sticker_loading">正在加载贴纸&#8230;</string>
    <string name="lsq_sticker_load_unexsit">贴纸不存在，请换一个试试</string>
    <string name="lsq_sticker_over_limit">OMG, 同时仅允许使用 %s 张贴纸</string>
    <string name="lsq_sticker_total_format">%1$s 张贴纸</string>
    <string name="lsq_sticker_empty">还没有贴纸</string>
    <string name="lsq_sticker_empty_msg">快去贴纸商店挑选海量贴纸</string>
    <string name="lsq_sticker_1_1">怪咖营地4</string>
    <string name="lsq_sticker_online_title">贴纸商店</string>
    <string name="lsq_sticker_remove_title">删除贴纸</string>
    <string name="lsq_sticker_remove_msg">您是否需要删除贴纸「%s」？</string>
    <string name="lsq_sticker_cate_all">全部</string>
    <string name="lsq_sticker_cate_history">常用</string>
    <string name="lsq_edit_text_title">文字</string>
    <string name="lsq_style_default_edit_icon_text_add">添加</string>
    <string name="lsq_style_default_edit_icon_text_color">颜色</string>
    <string name="lsq_style_default_edit_icon_text_font">样式</string>
    <string name="lsq_edit_text_sticker_default_text">点击输入内容</string>
    <string name="lsq_text_sticker_font_color">字体颜色</string>
    <string name="lsq_text_sticker_background_color">背景颜色</string>
    <string name="lsq_text_sticker_stroke_color">线条颜色</string>
    <string name="lsq_text_sticker_text_color">#FFFFFF</string>
    <string name="lsq_text_sticker_text_shadow_color">#000000</string>
    <string name="lsq_text_style_right_to_left">从右到左</string>
    <string name="lsq_text_style_left_to_right">从左到右</string>
    <string name="lsq_text_style_underline">下划线</string>
    <string name="lsq_text_style_alignleft">左对齐</string>
    <string name="lsq_text_style_alignright">右对齐</string>
    <string name="lsq_text_style_aligncenter">居中</string>
    <string name="las_date_format">yyyy年M月d日</string>
    <string name="las_week_Sun">周日</string>
    <string name="las_week_Mon">周一</string>
    <string name="las_week_Tue">周二</string>
    <string name="las_week_Wed">周三</string>
    <string name="las_week_Thu">周四</string>
    <string name="las_week_Fri">周五</string>
    <string name="las_week_Sat">周六</string>
    <string name="lsq_filter_group_Leica">莱卡</string>
    <string name="lsq_filter_group_GailyColoured">鲜艳</string>
    <string name="lsq_filter_group_Oldtimes">叙旧</string>
    <string name="lsq_filter_group_Enhance">增强</string>
    <string name="lsq_filter_group_Glare">光效</string>
    <string name="lsq_filter_group_Beauty">自然美颜</string>
    <string name="lsq_filter_group_Magic">魔法色</string>
    <string name="lsq_filter_group_MeituBeauty">柔光美颜</string>
	<string name="lsq_filter_group_EdgeEffects">热力图</string>
	<string name="lsq_filter_group_EdgeEffects001">边缘特效</string>
    <string name="lsq_filter_online_title">在线滤镜</string>
    <string name="lsq_filter_remove_title">删除滤镜</string>
    <string name="lsq_filter_remove_msg">您是否需要删除滤镜「%s」？</string>
    <string name="lsq_filter_Normal">无效果</string>
    <string name="lsq_filter_Brightly">斑斓</string>
    <string name="lsq_filter_Abao">阿宝</string>
    <string name="lsq_filter_Nostalgic">怀旧</string>
    <string name="lsq_filter_Artistic">艺术</string>
    <string name="lsq_filter_Brilliant">灿烂</string>
    <string name="lsq_filter_Cheerful">愉悦</string>
    <string name="lsq_filter_Clear">清澈</string>
    <string name="lsq_filter_Fade">褪色</string>
    <string name="lsq_filter_Forest">森林</string>
    <string name="lsq_filter_Gloss">光泽</string>
    <string name="lsq_filter_Harmony">和谐</string>
    <string name="lsq_filter_Instant">鲜艳</string>
    <string name="lsq_filter_Lightup">明亮</string>
    <string name="lsq_filter_Morning">清晨</string>
    <string name="lsq_filter_Newborn">新生</string>
    <string name="lsq_filter_Noir">黑白</string>
    <string name="lsq_filter_Relaxed">轻松</string>
    <string name="lsq_filter_Rough">粗犷</string>
    <string name="lsq_filter_Thick">浓郁</string>
    <string name="lsq_filter_Vintage">复古</string>
    <string name="lsq_filter_Leica">莱卡</string>
   	<string name="lsq_filter_Nature">柔和</string>
	<string name="lsq_filter_Blusher">粉色</string>
	<string name="lsq_filter_Jelly">果酱</string>
	<string name="lsq_filter_Jam">黑白</string>
	<string name="lsq_filter_Ruddy">日出</string>
	<string name="lsq_filter_Sugar">甜蜜</string>
	<string name="lsq_filter_Powder">暮光</string>
	<string name="lsq_filter_Whitening">唯美</string>
	<string name="lsq_filter_Multicolor">多彩</string>
	<string name="lsq_filter_Azure">科幻蓝</string>
	<string name="lsq_filter_Infrared">红外线</string>
	<string name="lsq_filter_Fluorescence">荧光绿</string>
	<string name="lsq_filter_Starshine">星尘</string>
	<string name="lsq_filter_Flame">红外</string>
	<string name="lsq_filter_Polychrome">热力</string>
	<string name="lsq_filter_Angulation">科幻</string>
	<string name="lsq_filter_Hallucination">迷幻</string>
	<string name="lsq_filter_Nighttime">夜视</string>
	<string name="lsq_filter_Splendid">多普勒</string>
    <string name="lsq_filter_SkinNature">自然</string>
    <string name="lsq_filter_SkinPink">粉嫩</string>
    <string name="lsq_filter_SkinJelly">果冻</string>
    <string name="lsq_filter_SkinNoir">黑白</string>
    <string name="lsq_filter_SkinRuddy">红润</string>
    <string name="lsq_filter_SkinPowder">蜜粉</string>
</resources>