<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lsq_background_editor" >

    <ImageView
        android:id="@+id/lsq_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lsq_featureBar"
        android:background="@color/lsq_background_editor"
        android:scaleType="fitCenter" />

    <org.lasque.tusdk.impl.components.widget.sticker.StickerView
        android:id="@+id/lsq_stickerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lsq_featureBar" >
    </org.lasque.tusdk.impl.components.widget.sticker.StickerView>

    <org.lasque.tusdk.core.view.widget.TuMaskRegionView
        android:id="@+id/lsq_cutRegionView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lsq_featureBar"/>
	
	<org.lasque.tusdk.core.view.widget.TuSdkEditText
        android:id="@+id/lsq_editTextView"
        android:hint="@string/lsq_edit_text_sticker_default_text"
        android:inputType="textMultiLine"
        android:lines="2"
        android:gravity="center_vertical"
        android:layout_above="@+id/lsq_featureBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	<LinearLayout
	    android:id="@+id/lsq_featureBar"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:orientation="horizontal"
	    android:layout_above="@+id/lsq_bar_bottomBar" >
	
	        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_feature_add"
	            style="@style/lsq_edit_textFeatureButton"
	            android:drawableTop="@drawable/lsq_style_default_edit_icon_text_addtype"
	            android:text="@string/lsq_style_default_edit_icon_text_add" />
	
	        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_feature_color"
	            style="@style/lsq_edit_textFeatureButton"
	            android:drawableTop="@drawable/lsq_style_default_edit_icon_text_color_default"
	            android:text="@string/lsq_style_default_edit_icon_text_color" />
	
	        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_feature_style"
	            style="@style/lsq_edit_textFeatureButton"
	            android:drawableTop="@drawable/lsq_style_default_edit_icon_text_font_default"
	            android:text="@string/lsq_style_default_edit_icon_text_font" />
	    
	</LinearLayout>
	
	<HorizontalScrollView
        android:id="@+id/lsq_styleWrap"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/lsq_bar_bottomBar"
        android:background="@color/lsq_background_option_bar" >

        <LinearLayout
            android:id="@+id/lsq_actions_wrapview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

		    <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_styleToRight"
                style="@style/lsq_edit_entryOptionButton"
                android:layout_width="80dp"
                android:drawableTop="@drawable/lsq_style_default_edit_icon_style_toright_font_default"
	            android:text="@string/lsq_text_style_left_to_right" />

		    <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_styleToLeft"
                style="@style/lsq_edit_entryOptionButton"
                android:layout_width="80dp"
                android:drawableTop="@drawable/lsq_style_default_edit_icon_style_toleft_font_default"
	            android:text="@string/lsq_text_style_right_to_left" />
		    
		    <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_styleUnderline"
                style="@style/lsq_edit_entryOptionButton"
                android:layout_width="80dp"
                android:drawableTop="@drawable/lsq_style_default_edit_icon_style_underline_font_default"
	            android:text="@string/lsq_text_style_underline" />
		
		    <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_styleAlignLeft"
                style="@style/lsq_edit_entryOptionButton"
                android:layout_width="80dp"
                android:drawableTop="@drawable/lsq_style_default_edit_icon_style_alignleft_font_default"
	            android:text="@string/lsq_text_style_alignleft" />
		
		    <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_styleAlignRight"
                style="@style/lsq_edit_entryOptionButton"
                android:layout_width="80dp"
                android:drawableTop="@drawable/lsq_style_default_edit_icon_style_alignright_font_default"
	            android:text="@string/lsq_text_style_alignright" />
		
		    <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_styleAlignCenter"
                style="@style/lsq_edit_entryOptionButton"
                android:layout_width="80dp"
                android:drawableTop="@drawable/lsq_style_default_edit_icon_style_aligncenter_font_default"
	            android:text="@string/lsq_text_style_aligncenter" />
            
        </LinearLayout>
    </HorizontalScrollView>
	    
	<org.lasque.tusdk.core.view.TuSdkLinearLayout
	    android:id="@+id/lsq_colorWrap"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:orientation="vertical"
	    android:layout_above="@+id/lsq_bar_bottomBar" >
	
		<org.lasque.tusdk.core.view.TuSdkLinearLayout
		    android:id="@+id/lsq_colorParamView"
	        android:layout_width="match_parent"
	        android:layout_height="28dp"
	        android:orientation="horizontal" >
	
	        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_fontColorButton"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:ellipsize="end"
	            android:gravity="center"
	            android:lines="1"
	            android:text="@string/lsq_text_sticker_font_color"
	            android:textColor="@color/lsq_color_white"
	            android:textSize="14sp" />
	
	        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_bgColorButton"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:ellipsize="end"
	            android:gravity="center"
	            android:lines="1"
	            android:text="@string/lsq_text_sticker_background_color"
	            android:textColor="@color/lsq_seekbar_drag_color"
	            android:textSize="14sp" />
	        
	        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
	            android:id="@+id/lsq_strokeColorButton"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:ellipsize="end"
	            android:gravity="center"
	            android:lines="1"
	            android:text="@string/lsq_text_sticker_stroke_color"
	            android:textColor="@color/lsq_seekbar_drag_color"
	            android:textSize="14sp" />
	        
	    </org.lasque.tusdk.core.view.TuSdkLinearLayout>
	    
		<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="20dp">
		
	    	<org.lasque.tusdk.impl.components.widget.sticker.TuSdkColorSelectorBar
   	            android:id="@+id/lsq_colorSelector"
   	            android:layout_centerHorizontal="true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	    	
		</RelativeLayout>
	</org.lasque.tusdk.core.view.TuSdkLinearLayout>
	
    <RelativeLayout
        android:id="@+id/lsq_color_bar_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lsq_background_editor_bottom_bar"
        android:orientation="horizontal" >

        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
            android:id="@+id/lsq_bar_backButton"
            android:layout_width="44dp"
            android:layout_height="match_parent"
			android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
			android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:scaleType="center"
            android:src="@drawable/lsq_style_default_edit_button_back" />

    </RelativeLayout>
	
    <RelativeLayout
        android:id="@+id/lsq_bar_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lsq_background_editor_bottom_bar"
        android:orientation="horizontal" >

        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
            android:id="@+id/lsq_bar_cancelButton"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
			android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:scaleType="center"
            android:src="@drawable/lsq_style_default_edit_button_cancel" />

        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
            android:id="@+id/lsq_bar_completeButton"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="center"
            android:src="@drawable/lsq_style_default_edit_button_completed" />
    </RelativeLayout>

</RelativeLayout>