<?xml version="1.0" encoding="utf-8"?>
<org.lasque.tusdk.impl.components.widget.sticker.StickerListEmptyView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lsq_background_default" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/lsq_style_default_sticker_empty"
            android:gravity="center_horizontal"
            android:text="@string/lsq_sticker_empty"
            android:textColor="#545454"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lsq_sticker_empty_msg"
            android:textColor="#545454"
            android:textSize="12sp" />

        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
            android:id="@+id/lsq_empty_more_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tusdk_button_orange_radius"
            android:gravity="center"
            android:text="@string/lsq_sticker_online_title"
            android:textColor="@color/lsq_color_white"
            android:textSize="16sp" />
    </LinearLayout>

</org.lasque.tusdk.impl.components.widget.sticker.StickerListEmptyView>